--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,7 +34,8 @@
     "prettier/prettier": ["error", { "singleQuote": true }],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
     "import/extensions": ["error", "never", { "ignorePackages": true }],
-    "import/no-unresolved": 0
+    "import/no-unresolved": 0,
+    "react/jsx-props-no-spreading": 0
   },
   "overrides": [
     {
@@ -50,5 +51,8 @@
         "jest": true
       }
     }
-  ]
+  ],
+  "globals": {
+    "JSX": true
+  }
 }
