--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
   },
   "dependencies": {
     "formik": "^2.2.9",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.5",
+    "sort-by": "^1.2.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
