--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "start": "yarn install && vite"
   },
   "dependencies": {
+    "grpc-web": "^1.4.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "ts-protoc-gen": "^0.15.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
