--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intl-tel-input": "^8.2.0",
     "react-router-dom": "^6.4.5",
     "sort-by": "^1.2.0",
     "yup": "^0.32.11"
