Add Signup Modal

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,7 +36,8 @@
     "import/extensions": ["error", "never", { "ignorePackages": true }],
     "import/no-unresolved": 0,
     "react/jsx-props-no-spreading": 0,
-    "react/function-component-definition": 0
+    "react/function-component-definition": 0,
+    "react/require-default-props": "off"
   },
   "overrides": [
     {
