--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -2,8 +2,6 @@ version: v1
 plugins:
   - name: ts
     out: src/
-    path: ./node_modules/.bin/protoc-gen-ts
+    path: ./node_modules/@protobuf-ts/plugin/bin/protoc-gen-ts
     opt:
-      - service=grpc-web
-      - grpc-web_out=import_style=typescript
-      # - mode=grpcweb
+      - output_javascript_es2016
