--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "start": "npm install && vite"
   },
   "dependencies": {
+    "@protobuf-ts/grpcweb-transport": "^2.8.2",
+    "@protobuf-ts/plugin": "^2.8.2",
     "grpc-web": "^1.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
