Implement Vendor Registeration

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,7 +37,8 @@
     "import/no-unresolved": 0,
     "react/jsx-props-no-spreading": 0,
     "react/function-component-definition": 0,
-    "react/require-default-props": "off"
+    "react/require-default-props": "off",
+    "no-nested-ternary": 0
   },
   "overrides": [
     {
