--- a/package.json
+++ b/package.json
@@ -17,16 +17,18 @@
     "@protobuf-ts/grpcweb-transport": "^2.8.2",
     "@protobuf-ts/plugin": "^2.8.2",
     "formik": "^2.2.9",
+    "grpc-web": "^1.4.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-intl-tel-input": "^8.2.0",
     "react-router-dom": "^6.4.5",
     "sort-by": "^1.2.0",
-    "yup": "^0.32.11",
-    "grpc-web": "^1.4.2",
-    "ts-protoc-gen": "^0.15.0"
+    "ts-protoc-gen": "^0.15.0",
+    "vite": "^4.0.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
@@ -59,8 +61,7 @@
     "postcss": "^8.4.19",
     "prettier": "^2.8.0",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.6.4",
-    "vite": "^3.2.3"
+    "typescript": "^4.6.4"
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
