--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "grpc-web": "^1.4.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
