--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,7 +39,8 @@
     "react/function-component-definition": 0,
     "react/require-default-props": "off",
     "no-nested-ternary": 0,
-    "react/no-unused-prop-types": 0
+    "react/no-unused-prop-types": 0,
+    "no-restricted-syntax": 0
   },
   "overrides": [
     {
