--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^4.7.1",
     "react-intl-tel-input": "^8.2.0",
     "react-router-dom": "^6.4.5",
+    "react-toastify": "^9.1.1",
     "sort-by": "^1.2.0",
     "ts-protoc-gen": "^0.15.0",
     "uuid": "^9.0.0",
