--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@protobuf-ts/grpcweb-transport": "^2.8.2",
     "@protobuf-ts/plugin": "^2.8.2",
+    "@reduxjs/toolkit": "^1.9.1",
     "formik": "^2.2.9",
     "grpc-web": "^1.4.2",
     "localforage": "^1.10.0",
@@ -25,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-intl-tel-input": "^8.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
     "sort-by": "^1.2.0",
     "ts-protoc-gen": "^0.15.0",
