--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@types/redux-mock-store": "^1.0.3",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.45.1",
     "@typescript-eslint/parser": "^5.45.1",
@@ -70,6 +71,7 @@
     "postcss": "^8.4.19",
     "prettier": "^2.8.0",
     "prettier-plugin-tailwindcss": "^0.2.1",
+    "redux-mock-store": "^1.5.4",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.6.4",
     "vitest": "^0.26.3"
